# nomos

./: .gitignore  Cargo.toml  compiler.md  test.nomos  test.stream  todo
src/: id.rs  lexer.rs  lib.rs  main.rs  normalize.rs
src/egraph/: mod.rs
src/error/: extract.rs  mod.rs
src/impls/: arrangement.rs  clone.rs  debug.rs  eq.rs  language.rs  mod.rs  ord.rs  show.rs  try.rs
src/parser/: lexer.rs  lib.rs  mod.rs  pattern.rs
src/parser/syntax/: mod.rs  pattern.rs  term.rs  ty.rs
src/repl/: mod.rs
src/typing/: mod.rs
