[package]
name = "nomos"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
chumsky = { version = "0.10.1", features = ["pratt", "lexical", "lexical-numbers", "nightly"] }
fern = "0.7.1"
gc-arena = "0.5.3"
humantime = "2.2.0"
log = "0.4.27"
nucleo-matcher = "0.3.1"
thiserror = "2.0.16"
