[package]
name = "nomos"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
fern = "0.7.1"
generational-arena = "0.2.9"
humantime = "2.2.0"
iter_tools = "0.39.0"
log = "0.4.27"
logos = "0.15.1"
nucleo-matcher = "0.3.1"
ratatui = { version = "0.29.0", features = ["all-widgets", "scrolling-regions"] }
thiserror = "2.0.16"
tui-input = "0.14.0"
uuid = { version = "1.18.1", features = ["v4"] }
yansi = "1.0.1"
